change garden_produce to correct api specificiations
