# swagger/v1/swagger.json
@@ -5,6 +5,221 @@
     "version": "v1"
   },
   "paths": {
+    "/garden_produces": {
+      "post": {
+        "summary": "Creates a garden_produce",
+        "tags": [
+          "garden_produces"
+        ],
+        "consumes": [
+          "application/json",
+          "application/xml"
+        ],
+        "parameters": [
+          {
+            "name": "garden_produce",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "garden_id": {
+                  "type": "number"
+                },
+                "produce_id": {
+                  "type": "number"
+                },
+                "available_at": {
+                  "type": "string"
+                },
+                "readiness": {
+                  "type": "number"
+                }
+              },
+              "required": [
+                "garden_id",
+                "produce_id",
+                "available_at",
+                "readiness"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "garden_produce created"
+          },
+          "422": {
+            "description": "invalid request"
+          }
+        }
+      },
+      "get": {
+        "summary": "Gets index of all garden_produce",
+        "tags": [
+          "garden_produces"
+        ],
+        "produces": [
+          "application/json",
+          "application/xml"
+        ],
+        "responses": {
+          "200": {
+            "description": "garden_produces found",
+            "schema": {
+              "type": "array",
+              "items": {
+                "properties": {
+                  "garden_id": {
+                    "type": "number"
+                  },
+                  "produce_id": {
+                    "type": "number"
+                  },
+                  "available_at": {
+                    "type": "string"
+                  },
+                  "readiness": {
+                    "type": "number"
+                  }
+                }
+              },
+              "required": [
+                "garden_id",
+                "produce_id",
+                "available_at",
+                "readiness"
+              ]
+            }
+          }
+        }
+      }
+    },
+    "/garden_produces/{id}": {
+      "get": {
+        "summary": "Retrieves a garden_produce",
+        "tags": [
+          "garden_produces"
+        ],
+        "produces": [
+          "application/json",
+          "application/xml"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "name found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "garden_id": {
+                  "type": "number"
+                },
+                "produce_id": {
+                  "type": "number"
+                },
+                "available_at": {
+                  "type": "string"
+                },
+                "readiness": {
+                  "type": "number"
+                }
+              },
+              "required": [
+                "garden_id",
+                "produce_id",
+                "available_at",
+                "readiness"
+              ]
+            }
+          },
+          "404": {
+            "description": "garden_produce not found"
+          }
+        }
+      },
+      "patch": {
+        "summary": "Edits a garden_produce",
+        "tags": [
+          "garden_produces"
+        ],
+        "consumes": [
+          "application/json",
+          "application/xml"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "garden_produce",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "garden_id": {
+                  "type": "number"
+                },
+                "produce_id": {
+                  "type": "number"
+                },
+                "available_at": {
+                  "type": "string"
+                },
+                "readiness": {
+                  "type": "number"
+                }
+              },
+              "required": [
+                "garden_id",
+                "produce_id",
+                "available_at",
+                "readiness"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "garden_produce changed"
+          },
+          "404": {
+            "description": "garden_produce not found"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Deletes a garden_produce",
+        "tags": [
+          "garden_produces"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "garden_produce deleted"
+          },
+          "404": {
+            "description": "garden_produce not found"
+          }
+        }
+      }
+    },
     "/gardens": {
       "post": {
         "summary": "Creates a garden",
